# uZX

./: .clang-format  .clang-format-arcadia  .clang-format-ignore  .clangd  .editorconfig  .gitignore  .gitmodules  AUTHOR.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Design.md  README.md  UX Research.md  compile_flags.txt  format-code.sh  versions.cmake
src/: CMakeLists.txt  codesign.sh.in  main.cpp  sources.cmake  tracktion_juce_all_includes.h
src/controllers/: App.cpp  App.h  BindedAutoParameter.h  Commands.h  EditState.cpp  EditState.h  Main.cpp  MainCommands.h  MainController.cpp  MainController.h  ParamAttachments.h  ParamAttachments.md  ParamEndpoint.cpp  ParamEndpoint.h  Parameters.h  Parameters.test.cpp  PlayerController.cpp  PlayerController.h  Playhead.cpp  Playhead.h  PropertyStorage.h  ScaleBindings.h  TuningCommands.h  TuningController.cpp  TuningController.h  UIBehavior.h
src/formats/psg/: PsgData.h  PsgFile.h  README.md  README.mp  psg.h  psg_file.h
src/gui/: Commands.h  Footer.h  Main.cpp  MainDocument.h  Transport.h
src/gui/app/: App.cpp  App.h  Commands.h  Footer.h  MainDocument.h  MainWindow.h  Transport.h
src/gui/common/: ChoiceButton.h  ComboBindingWithPresets.cpp  ComboBindingWithPresets.h  ComboBox.h  ComboBoxWithOverrideId.h  Components.cpp  Components.h  EditState.h  GUIPaintMeasurer.h  LabeledKnob.cpp  LabeledKnob.h  LabeledRotarySlider.cpp  LabeledRotarySlider.h  LabeledSlider.cpp  LabeledSlider.h  LookAndFeel.cpp  LookAndFeel.h  LookAndFeel.test.cpp  MidiParameterMapping.cpp  MidiParameterMapping.h  MoTooltipWindow.h  MouseListener.cpp  MouseListener.h  ParamAttachments.cpp  ParamAttachments.h  ParamBindings.cpp  ParamBindings.h  ParamBindings.test.cpp  ParameterSliderHelpers.h  ProgressDialog.cpp  ProgressDialog.h  PsgClipComponent.h  ToggleButton.h  Transport.cpp  Transport.h  UIBehavior.h  Utilities.cpp  Utilities.h
src/gui/devices/: AYPluginSidePanel.cpp  AYPluginSidePanel.h  DevicePanelItem.cpp  DevicePanelItem.h  DevicePluginUIAdapter.cpp  DevicePluginUIAdapter.h  DeviceUIFrame.cpp  DeviceUIFrame.h  GenereicPluginAdapters.cpp  GenereicPluginAdapters.h  GenericPluginAdapters.cpp  GenericPluginAdapters.h  LevelMeterUI.cpp  LevelMeterUI.h  PluginComponent.cpp  PluginComponent.h  PluginDeviceUI.cpp  PluginDeviceUI.h  PluginTree.cpp  PluginTree.h  PluginUIAdapterRegistry.cpp  PluginUIAdapterRegistry.h  TrackDevicesPanel.cpp  TrackDevicesPanel.h  TracktionPluginAdapters.cpp  TracktionPluginAdapters.h
src/gui/layout/: Layout.h
src/gui/main/: AboutDialog.cpp  AboutDialog.h  Footer.cpp  Footer.h  MainDocument.h  MainWindow.cpp  MainWindow.h  PlayerDocument.cpp  PlayerDocument.h
src/gui/nodes/: GraphEditorPanel.cpp  GraphEditorPanel.h  NodeComponent.cpp  NodeComponent.h
src/gui/timeline/: AudioTimeline.h  ClipComponents.cpp  ClipComponents.h  DetailsPanelComponent.cpp  DetailsPanelComponent.h  EditComponent.cpp  EditComponent.h  LevelMeterUI.cpp  LevelMeterUI.h  MidiPlaybackDemo.h  MidiRecordingDemo.h  MidiTimeline.h  PlayheadComponent.cpp  PlayheadComponent.h  PluginComponent.cpp  PluginComponent.h  PluginDeviceUI.cpp  PluginDeviceUI.h  PsgClipComponent.cpp  PsgClipComponent.h  PsgParamEditorComponent.cpp  PsgParamEditorComponent.h  Ruler.cpp  Ruler.h  Timeline.h  TimelineGrid.cpp  TimelineGrid.h  TrackComponents.cpp  TrackComponents.h  TrackDevicesComponent.cpp  TrackDevicesComponent.h
src/gui/tuning/: ChipClockComboBinding.cpp  ChipClockComboBinding.h  TuningPreview.cpp  TuningPreview.h  TuningPreviewGrid.cpp  TuningPreviewGrid.h  TuningWindow.cpp  TuningWindow.h
src/model/: Behavior.h  CustomClip.h  CustomClip.test.cpp  CustomClipTest.cpp  EditUtilities.cpp  EditUtilities.h  Ids.h  PsgClip.cpp  PsgClip.h  PsgList.cpp  PsgList.h  PsgMidi.cpp  PsgMidi.h  PsgMidi.test.cpp  PsgTrack.h  PsgTrack.test.cpp  Timecode.h
src/models/: Behavior.h  CustomClip.h  CustomClip.test.cpp  EditUtilities.cpp  EditUtilities.h  Ids.h  PsgClip.cpp  PsgClip.h  PsgList.cpp  PsgList.h  PsgList.test.cpp  PsgMidi.cpp  PsgMidi.h  PsgMidi.test.cpp  PsgParameter.h  PsgParameter.test.cpp  PsgTrack.h  Selectable.cpp  Timecode.h
src/models/tuning/: AutoTuning.cpp  AutoTuning.h  AutoTuning.test.cpp  CustomTuning.test.cpp  EqualTemperamentTuning.test.cpp  RationalTuning.test.cpp  Ratios.cpp  Ratios.h  Ratios.test.cpp  Scales.cpp  Scales.h  Scales.test.cpp  TemperamentSystem.cpp  TemperamentSystem.h  TuningRegistry.cpp  TuningRegistry.h  TuningState.h  TuningSystem.h  TuningSystemBase.cpp  TuningSystemBase.h  TuningTable.cpp  TuningTable.h  TuningTable.test.cpp  TuningTables.h
src/nodes/: Graph.h
src/plugins/uZX/: CMakeLists.txt  DevicePlugin.h  MidiToPsgConverter.cpp  MidiToPsgConverter.h  MidiToPsgConverter.test.cpp  MidiToPsgPlugin.cpp  MidiToPsgPlugin.h  MidiToPsgTransformer.cpp  MidiToPsgTransformer.h  MidiToPsgTransformer.test.cpp  NotesToPsgMapper.cpp  NotesToPsgMapper.h  NotesToPsgMapper.test.cpp  NotesToPsgPlugin.cpp  NotesToPsgPlugin.h
src/plugins/uZX/aychip/: AYChip.test.cpp  AYChipTest.cpp  AYPlugin.cpp  AYPlugin.h  AYPluginEditor.cpp  AYPluginEditor.h  ChannelEffectFilter.h  ChannelEffectFilter.test.cpp  ChannelMuter.cpp  ChannelMuter.h  ChannelMuter.test.cpp  ChipClockPresets.cpp  ChipClockPresets.h  README.md  aychip.cpp  aychip.h  chipulator.h  freq_tables.h
src/plugins/uZX/instrument/: ChipInstrument.cpp  ChipInstrument.h  ChipInstrumentPlugin.cpp  ChipInstrumentPlugin.h  ChipInstrumentUI.cpp  ChipInstrumentUI.h  ChipInstrumentVoice.cpp  ChipInstrumentVoice.h  ChipOscillatorControls.cpp  MPEEffect.cpp  (+14 more)
src/util/: CIDiagnostics.h  CachedValueWithValue.h  FileOps.cpp  FileOps.h  Helpers.cpp  Helpers.h  Midi.cpp  Midi.h  TestHelpers.h  base64.cpp  base64.h  base64_cx.h  convert.h  enumchoice.h  enumchoice.test.cpp  types.h
src/utils/: StringLiterals.h
src/viewmodels/tuning/: MultitrackMidiPreview.cpp  MultitrackMidiPreview.h  MultitrackMidiPreview.test.cpp  TuningPlayer.cpp  TuningPlayer.h  TuningViewModel.h  TuningViewModel.test.cpp
tests/: CMakeLists.txt  main.cpp
tests/plugins/uXZ/: AYChipTest.cpp
(+80 files in other folders)
